# hydroroot

./: .gitattributes  .gitignore  CITATION.cff  README.md  README.rst  apt.txt  codemeta.json  environment (copier 1).yml  environment.yml  environment.yml_copy  postBuild  pyproject.toml
.github/workflows/: conda-package-build.yml
binder/: environment.yml
conda/: environment.yml  meta.yaml
doc/: conf.py  environment.yml  index.rst  installation.rst  modeling.rst  notebook_examples.rst  quick-start.rst  usage.rst
doc/user/: api_analysis.rst  api_conductance.rst  api_display.rst  api_flux.rst  api_generator_markov.rst  api_generator_measured_root.rst  api_hydro_io.rst  api_init_parameter.rst  api_law.rst  api_length.rst  api_main.rst  api_radius.rst  api_read_file.rst  api_water_solute_transport.rst  modeling_bc.rst  modeling_solutes.rst  modeling_water.rst
example/: Untitled.ipynb  adjustment_K_and_k.py  adjustment_K_and_k_old.py  adjustment_K_k_Js_Ps.py  architectures_generation.py  example_archi_from_file.ipynb  example_archi_from_file.py  example_archi_from_file_sensibility_analysis.ipynb  example_archi_from_rsml.ipynb  example_cut_and_flow_analysis.ipynb  example_generated_archi.ipynb  example_k_adjustment.ipynb  example_parameter_class.ipynb  example_rsml_io.py  example_solute_water_transport.ipynb  example_water_solute_analysis.ipynb  hydroroot_ui.ipynb  load_interface.py  miscelenous_fct.py  out.csv  parameter_UI.py  parameters-stage-FB-P01.yml  parameters_150-5P13.yml  parameters_Ctr-3P2.yml  parameters_mistral_maize.yml  results.csv  test.rsml
example/Boursiac2022/: adjustment_K_and_k.py  boursiac2022.ipynb  out.csv  simulation_fig-1B-3C-6E-7B.py  simulation_fig-5_sup-fig-8.py  simulation_fig-6-B-C.py  simulation_fig-6A_sup-fig-6.py  simulation_fig-6D.py  simulation_sup-fig-4C.py  simulation_sup-fig-7.py  simulation_sup_fig-5-B.py  simulation_table-1.py
example/data/: cnf_data.csv  mistralP01.txt  stage-FB-P01.txt
share/plant0517/: length_law.ipynb  simulation analysis.ipynb  simulation.py
share/plant0916/: length_law.ipynb  simulation.py  simulation_13.py  simulation_14.py  simulation_16.py
src/hydroroot/: conductance.py  init_parameter.py  (+1 more)
test/: 21-06-11-test_rsml.py  hydro_measured.py  old_hydrostatic.py  test_archi_data.py  test_hydro.py  test_mtg.py  test_rsml_yaml.py  test_water_solute_transport.py
(+66 files in other folders)
