# FB 2025-04-14: based on ADEL and hydroshoot, sphinx pkg in environment.yml
[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
  ]
build-backend = "setuptools.build_meta"

# allow openalea to be a namespace package
[tool.setuptools.packages.find]
where = ["src"]

# enable dynamic versioning based on git tags
[tool.setuptools_scm]

[project]
name = "openalea.hydroroot"
authors = [
  { name = "Christophe Pradal" },
  { name = "Yann Boursiac" },
  { name = "Fabrice Bauget" },
  { name = "Mikael Lucas" },
  { name = "Christophe Godin" },
  { name = "Christophe Maurel" },
]
description = "OpenAlea.HydroRoot is a hydraulic root architecture modelling and a root architecture system generator package."
readme = "README.rst"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.6"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
#version = "2.0.1"
dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "scipy",
    "pyyaml",
]


# section specific to conda-only distributed package (not used by pip yet)
[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
    "openalea.mtg",
    "openalea.plantgl",
    "openalea.deploy",
    "yaml",
    "rsml"
]

[project.optional-dependencies]
test = ["pytest"]
notebook = ["jupyter"]
doc = [
  "sphinx-favicon",
  "sphinx-rtd-theme",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "nbsphinx",
]

[project.urls]
Homepage = "https://hydroroot.rtfd.io/"
"Bug Tracker" = "https://github.com/openalea/hydroroot/issues"
Discussions = "https://github.com/openalea/hydroroot/discussions"
Changelog = "https://github.com/openalea/hydroroot/releases"

#[tool.setuptools.dynamic]
#readme = {file = ["README.rst"]}

[tool.setuptools.package-data]
"hydroshoot_data" = ["*"]

[project.entry-points."wralea"]
"hydroroot" = "openalea.hydroroot_wralea"